# mc

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: deploy.yml
docs/: book.toml
docs/src/: SUMMARY.md  first-steps.md  introduction.md
docs/src/commands/: configuration.md  general.md  help.md  init.md  installation.md  instance.md  java.md  minecraft.md  run.md  version.md
src/: capabilities.rs  context.rs  main.rs
src/cli/: context.rs  globals.rs  mod.rs  styles.rs
src/cli/commands/: add.rs  init.rs  java.rs  minecraft.rs  mod.rs  remove.rs  run.rs
src/crypto/: checksum.rs  hash.rs  hashing.rs  mod.rs
src/env/: architecture.rs  mod.rs  platform.rs
src/java/: distribution.rs  mod.rs  vendor.rs  version.rs
src/manifest/: lock.rs  mod.rs  presets.rs  raw.rs
src/minecraft/: eula.rs  loader.rs  mod.rs  seed.rs  server_properties.rs  version.rs
src/mods/: loader.rs  service.rs
src/network/: archive.rs  artifact.rs  mod.rs
src/ops/: eula.rs  init.rs  java.rs  minecraft.rs  mod.rs  mods.rs  run.rs
src/resolvers/: fabric.rs  java.rs  loader.rs  minecraft.rs  mod.rs
src/services/: corretto_api.rs  fabric_api.rs  graal_api.rs  java_provider.rs  minecraft_api.rs  mod.rs  modrinth_api.rs
src/utils/: case_iterable.rs  csv.rs  date.rs  errors.rs  mod.rs  product_descriptor.rs  restricted_names.rs  shell.rs  toml.rs  verbosity.rs
test123/: mc.toml
