[package]
name = "mc"
version = "0.0.2"
edition = "2024"

[dependencies]
annotate-snippets = "0.12.10"
anstream = "0.6.21"
anstyle = "1.0.13"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] } # change this to only required features
toml = "0.9.11"
toml_edit = { version = "0.24.0", features = ["serde"] }
tracing = "0.1.44"
unicode-ident = "1.0.22"
url = { version = "2.5.8", features = ["serde"] }
